[package]
name = "imu_localization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safe_drive = "0.3.5"
rust_robo_utils = {git = "https://github.com/motii8128/rust_robo_utils"}

[package.metadata.ros]
safe_drive_version = "0.3.5"