[package]
name = "imu_localization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safe_drive = "0.3.5"
nalgebra = "0.32.3"

haya_imu_msgs = {path = "./.msg/haya_imu_msgs"}
geometry_msgs = {path = "./.msg/geometry_msgs"}
std_msgs = {path = "./.msg/std_msgs"}

[package.metadata.ros]
msg = ["haya_imu_msgs", "geometry_msgs", "std_msgs"]
msg_dir = "./.msg/"
safe_drive_version = "0.3.5"